unpackaged/main/default/objects/Price_List__c/Price_List__c.object-meta.xml
<CustomObject>
    <description>Price list matrix of prices for products in each branch and term</description>
    <label>Price List</label>
    <nameField>
        <displayFormat>Price-{000000}</displayFormat>
        <label>Price List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>