unpackaged/main/default/objects/Price_List__c/fields/Complex_Length__c.field-meta.xml
<CustomField>
    <fullName>Complex_Length__c</fullName>
    <label>Complex Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>