unpackaged/main/default/objects/Price_List__c/fields/Complex_Width__c.field-meta.xml
<CustomField>
    <fullName>Complex_Width__c</fullName>
    <label>Complex Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>