unpackaged/main/default/objects/Price_List__c/fields/External_Rental_Rate__c.field-meta.xml
<CustomField>
    <fullName>External_Rental_Rate__c</fullName>
    <description>To be used with JV Quote Lines</description>
    <formula>Monthly_Price__c +(Monthly_Price__c * 0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Rental Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>