unpackaged/main/default/objects/Price_List__c/fields/Maximum_Term__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Term__c</fullName>
    <label>Maximum Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>