unpackaged/main/default/objects/Price_List__c/fields/Minimum_Term__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Term__c</fullName>
    <inlineHelpText>Minimum Rental Term for this Product</inlineHelpText>
    <label>Minimum Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>