unpackaged/main/default/objects/Price_List__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(text(Branch__c)== "AUS Perth"||text(Branch__c)=="AUS Sydney"||text(Branch__c)== "AUS Melbourne"||text(Branch__c)== "AUS Brisbane", "Australia",
IF(text(Branch__c)== "Smoky River Lodge"||text(Branch__c)=="Horn River Lodge"||text(Branch__c)== "Camps East"||text(Branch__c)== "Sunday Creek Lodge"||text(Branch__c)== "Lodges on Spec"||text(Branch__c)=="Little Prairie Lodge"||text(Branch__c)== "Camps West", "Camps Canada",IF(text(Branch__c)== "Camps US", "Camps US",IF(text(Branch__c)== "Head Office", "Corporate", IF(text(Branch__c)== "ES Grande Prairie"||text(Branch__c)=="ES Fort St John"||text(Branch__c)=="ES Estevan", "ES Canada", IF(text(Branch__c)== "ES Colorado"||text(Branch__c)=="ES North Dakota"||text(Branch__c)=="ES Texas", "ES US", IF(text(Branch__c)== "BOXX Banks Dallas", "MPA", IF(text(Branch__c)== "BOXX Ottawa"||text(Branch__c)=="BOXX Moncton"||text(Branch__c)== "BOXX CL Martin"||text(Branch__c)== "BOXX Stoney Creek", "MSS Canada East", IF(text(Branch__c)== "BOXX Calgary"||text(Branch__c)=="BOXX Edmonton"||text(Branch__c)== "BOXX Saskatchewan"||text(Branch__c)== "BOXX Langley"||text(Branch__c)=="BOXX Nanaimo"||text(Branch__c)=="BOXX Kelowna"||text(Branch__c)=="BOXX Prince George" ,"MSS Canada West", IF(text(Branch__c)== "BOXX Atlanta"||text(Branch__c)=="BOXX Charlotte"||text(Branch__c)== "BOXX Schiavi"||text(Branch__c)== "BOXX Raleigh"||text(Branch__c)=="BOXX Marietta", "MSS US East", IF(text(Branch__c)== "Major Projects California", "MSS US MP", IF(text(Branch__c)=="BOXX Houston"||text(Branch__c)=="BOXX Fort Worth"||text(Branch__c)== "BOXX Dallas"||text(Branch__c)== "BOXX Major Projects"||text(Branch__c)=="BOXX MPA", "MSS US Southwest", IF(text(Branch__c)== "BOXX Vanguard", "MSS US Vanguard", "" )))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>