unpackaged/main/default/objects/Price_List__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>