unpackaged/main/default/objects/Price_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Branch__c</columns>
    <columns>Monthly_Price__c</columns>
    <columns>Term__c</columns>
    <columns>Minimum_Term__c</columns>
    <columns>Maximum_Term__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>