unpackaged/main/default/objects/Price_List__c/listViews/BOXX_US_Price_List.listView-meta.xml
<ListView>
    <fullName>BOXX_US_Price_List</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Branch__c</columns>
    <columns>Term__c</columns>
    <columns>Minimum_Term__c</columns>
    <columns>Maximum_Term__c</columns>
    <columns>Monthly_Price__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>BOXX Banks Dallas,BOXX Fort Worth,BOXX Houston</value>
    </filters>
    <label>BOXX US Price List</label>
</ListView>