unpackaged/main/default/objects/Price_List__c/listViews/Calgary_Price_List.listView-meta.xml
<ListView>
    <fullName>Calgary_Price_List</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Term__c</columns>
    <columns>Monthly_Price__c</columns>
    <columns>Minimum_Term__c</columns>
    <columns>Maximum_Term__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>BOXX Calgary</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>SS1S</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>SnE</value>
    </filters>
    <label>Calgary Price List</label>
</ListView>