unpackaged/main/default/objects/Price_List__c/listViews/Specific_Branch.listView-meta.xml
<ListView>
    <fullName>Specific_Branch</fullName>
    <columns>NAME</columns>
    <columns>Monthly_Price__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Term__c</columns>
    <columns>Maximum_Term__c</columns>
    <columns>Minimum_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>BOXX Saskatchewan</value>
    </filters>
    <label>Specific Branch</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>