unpackaged/main/default/objects/Price_List__c/listViews/VAPS.listView-meta.xml
<ListView>
    <fullName>VAPS</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Branch__c</columns>
    <columns>Monthly_Price__c</columns>
    <columns>Term__c</columns>
    <columns>Minimum_Term__c</columns>
    <columns>Maximum_Term__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>contains</operation>
        <value>guest chair</value>
    </filters>
    <label>VAPS</label>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>