unpackaged/main/default/objects/Price_List__c/listViews/WFS.listView-meta.xml
<ListView>
    <fullName>WFS</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>AUS Brisbane,AUS Melbourne,AUS Perth,AUS Sydney,Camps East,Camps US,Camps West,ES Colorado,ES Estevan,ES Fort St John,ES Grande Prairie,ES North Dakota,ES Texas</value>
    </filters>
    <label>WFS</label>
</ListView>